--- a/data-architect.html
+++ b/data-architect.html
@@ -73,7 +73,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://imanagecom.applytojob.com/apply/BhmLHiSOki/Data-Architect'>Data Architect - iManage - Career Page</a></h5> 
+<h5><a href='http://imanagecom.applytojob.com/apply/BhmLHiSOki/Data-Architect'>Data Architect - iManage - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -103,7 +103,7 @@ dig?...</p>
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999698263859-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999698263859-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -220,7 +220,7 @@ dig?...</p>
 <p>1 day ago ... Data Architect. Tallinn. Engineering ? Development Leads. Full-time. Submit your 
 application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Inmarsat/743999697632997-enterpise-data-architect'>Inmarsat Enterpise Data Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Inmarsat/743999697632997-enterpise-data-architect'>Inmarsat Enterpise Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -258,7 +258,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/datacom.co.nz/05477b95-14f8-45ab-b280-83ab048936b9'>Datacom - Technical Architecture Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/datacom.co.nz/05477b95-14f8-45ab-b280-83ab048936b9'>Datacom - Technical Architecture Manager</a></h5> 
 <p><span class="badge badge-light">Auckland</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -286,7 +286,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netcompany1/743999695235990-data-architect'>Netcompany Data Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netcompany1/743999695235990-data-architect'>Netcompany Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -372,7 +372,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/incorta/jobs/4458760002'>Job Application for SAP ERP Data Architect at Incorta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/incorta/jobs/4458760002'>Job Application for SAP ERP Data Architect at Incorta</a></h5> 
 <p><span class="badge badge-light">San Mateo</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -408,7 +408,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Oct 4, 2019 ... Apply online for the job of Big Data Architect at Tiger Analytics.</p>
 <hr/>
-<h5><a href='https://serviceplan.softgarden.io/job/4522369/Data-Engineer-Data-Architect-m-w-x-?jobDbPVId=12458529&amp;l=en'>Data Engineer / Data Architect (m/w/x)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://serviceplan.softgarden.io/job/4522369/Data-Engineer-Data-Architect-m-w-x-?jobDbPVId=12458529&amp;l=en'>Data Engineer / Data Architect (m/w/x)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -416,7 +416,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/aarete/job/osCE7fwz'>AArete Careers - Sr. Data Architecture Consultant</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/aarete/job/osCE7fwz'>AArete Careers - Sr. Data Architecture Consultant</a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -432,7 +432,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on:: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=ogwOafwu&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=n8GE6MwP&jvi=ogwOafwu,Job&jvk=Job'>Medidata Solutions Careers - Staff Systems Architect</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=ogwOafwu&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=n8GE6MwP&jvi=ogwOafwu,Job&jvk=Job'>Medidata Solutions Careers - Staff Systems Architect</a></h5> 
 <p><span class="badge badge-light">New York, New York  Iselin, New Jersey</span></p>
 <p>Posted on:: 2019-10-11</p>
 <hr/>
